--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "rimraf dist && tsc-watch --onSuccess \"npm run watch\"",
-    "watch": "nodemon \"src/app.ts\" --watch \"./src\""
+    "watch": "nodemon \"src/app.ts\" --watch \"./src\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KochkinAnna/sept-2022-NODE.git"
+
   },
   "keywords": [],
   "author": "",
@@ -33,6 +36,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
     "nodemon": "^2.0.21",
     "rimraf": "^4.3.1",
     "ts-node": "^10.9.1",
