--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "email-templates": "^11.0.3",
+    "eslint-plugin-sort-exports": "^0.8.0",
     "express": "^4.18.2",
     "handlebars": "^4.7.7",
     "joi": "^17.8.3",
