--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "nodemailer": "^6.9.1",
+    "socket.io": "^4.6.1",
+    "swagger-ui-express": "^4.6.2",
     "twilio": "^4.8.0",
     "uuid": "^9.0.0"
   },
@@ -45,6 +47,7 @@
     "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
